# pytorch-in-purebasic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_dependencies.sh  library.cpp  library.h  requirements.txt
pb/: test.pb
python/: model.py  train.py
